tests/reference/asr-kwargs_02_error-7c91f8f.stderr
semantic error: func02() got multiple values for argument 'b'
  --> tests/errors/kwargs_02_error.py:13:5
   |
13 |     func02(arg3, arg4, c=arg5, b=arg4)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
